Add Geo data task image dockerfile and requirements.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,11 @@ services:
             args:
                 BASEIMAGE: developmentseed/geolambda:1.2.0-python
         image: cirrusgeo/run-geolambda:latest
+    geodatalambda:
+        build:
+            context: .
+            dockerfile: ./data_geo/Dockerfile
+            args:
+                BASEIMAGE: developmentseed/geolambda:1.2.0-python
+        image: cirrusgeo/run-geodatalambda:latest
+
